added swagger for register did
