# docs/swagger.json
@@ -949,6 +949,40 @@
                 }
             }
         },
+        "/api/register-did": {
+            "post": {
+                "description": "This API creates a new DID of a specified type. Supported types include: Type 4 (BIP39 DID) Example for did_config: {\"type\":4,\"dir\":\"path/to/directory\\\",\"config\":\"configuration_string\",\"root_did\":true,\"master_did\":\"master_did_example\",\"secret\":\"secret_string\",\"priv_pwd\":\"mypassword\",\"quorum_pwd\":\"quorum_password\",\"img_file\":\"image_file_path\",\"did_img_file\":\"did_image_file_path\",\"pub_img_file\":\"public_image_file_path\",\"priv_img_file\":\"private_image_file_path\",\"pub_key_file\":\"public_key_file_path\",\"priv_key_file\":\"private_key_file_path\",\"quorum_pub_key_file\":\"quorum_public_key_file_path\",\"quorum_priv_key_file\":\"quorum_private_key_file_path\",\"mnemonic_file\":\"mnemonic_file_path\",\"childPath\":1}\"",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Basic"
+                ],
+                "summary": "Register DID",
+                "parameters": [
+                    {
+                        "description": "DID string in JSON format.",
+                        "name": "did",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.DIDResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/run-unpledge": {
             "post": {
                 "description": "This API will unpledge all Pledged RBT tokens",
